--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
     correo electronico: maqq2679@gmail.com <br>
     Telefono: 3118207019
     </h3>
+
+    <a href="fase2/design.html"></a>
 </body>
 </html>
