--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     Telefono: 3118207019
     </h3>
 
-    <a href="fase2/design.html"></a>
+    <a href="fase2/design.html"> Fase 2 </a>
 </body>
 </html>
