cambio nommbre img
Cambio nombre a imagen

--- a/fase2/design.html
+++ b/fase2/design.html
@@ -89,7 +89,7 @@
 
     <h4>Mi mockup</h4>
     <p>
-        <img src="imagen_act/_mockup1.jpg" alt="2">
+        <img src="imagen_act/mi-mockup1.jpg" alt="2">
     </p>
     
     <footer>
