--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     Telefono: 3118207019
     </h3>
 
-    <a href="fase2/design.html"> Fase 2 </a>
+    <a href="fase2/design.html"> Fase 2 </a> <br>
+    <a href="fase3/index.html"> Fase 3 </a>
 </body>
 </html>
