--- a/fase3/tema2.html
+++ b/fase3/tema2.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-</header>
+    <header>
+        <h1>
+            Etiquetas Básicas de HTML, Atributos y Valores <br>
+            <img src="imagenes_actividad/logoMQ_1.png" alt="">
+        </h1>
+    </header>
 <nav >
     <ul class="menu"> <br>
         <li><a href="index.html">Inicio</a> </li>
