--- a/fase3/tema1.html
+++ b/fase3/tema1.html
@@ -31,8 +31,8 @@
             </li>
             <li>Aprendizaje
                 <ul>
-                    <li>Actividad 1</li>
-                    <li>Actividad 2</li>
+                    <li><a href="evaluacion1.html"> Evaluación 1</a></li>
+                    <li><a href="evaluacion2.html"> Evaluación 2</a></li>
                 </ul>
             </li>
             <li>Acerca de
