--- a/fase4/t_autor.html
+++ b/fase4/t_autor.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Etiquetas Básicas de HTML, Atributos y Valores - MAQ</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="html, etiquetas, atributos">
-    <meta name="author" content="Martin Quevedo">
-    <meta name="description" content="Descripción de las etiquetas basicas de html y sus atributos">
+    <title>Document</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
@@ -20,12 +17,12 @@
     <nav >
         <ul class="menu"> <br>
             <li><a href="index.html">Inicio</a> </li>
-            <li>Temas de estudio 
+            <li>Temas de estudio
                 <ul>
                     <li><a href="tema1.html">Tema 1</a> </li>
                     <li><a href="tema2.html">Tema 2</a> </li>
                 </ul>
-            </li>
+            </li> 
             <li>Recursos Digitales
                 <ul>
                     <li><a href="recurso1.html"> Recurso Audiovisual 1</a></li>
@@ -34,8 +31,8 @@
             </li>
             <li>Aprendizaje
                 <ul>
-                    <li>Actividad 1</li>
-                    <li>Actividad 2</li>
+                    <li><a href="evaluacion1.html"> Evaluación 1</a></li>
+                    <li><a href="evaluacion2.html"> Evaluación 2</a></li>
                 </ul>
             </li>
             <li>Acerca de
