--- a/fase2/design.html
+++ b/fase2/design.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="keywords" content="html, etiquetas, atributos">
+    <meta name="author" content="Martin Quevedo">
+    <meta name="description" content="Descripción de las etiquetas basicas de html y sus atributos">
+    <title>Etiquetas Básicas de HTML, Atributos y Valores - MAQ</title>
 </head>
 <body>
     <header>
@@ -29,8 +32,8 @@
             </li>
             <li>Aprendizaje
                 <ul>
-                    <li>Actividad 1</li>
-                    <li>Actividad 2</li>
+                    <li>Evaluación 1</li>
+                    <li>Evaluación 2</li>
                 </ul>
             </li>
             <li>Acerca de
