--- a/fase3/index.html
+++ b/fase3/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> Etiquetas Básicas de HTML, Atributos y Valores - MAQ </title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
@@ -31,8 +31,8 @@
             </li>
             <li>Aprendizaje
                 <ul>
-                    <li>Actividad 1</li>
-                    <li>Actividad 2</li>
+                    <li><a href="evaluacion1.html"> Evaluación 1</a></li>
+                    <li><a href="evaluacion2.html"> Evaluación 2</a></li>
                 </ul>
             </li>
             <li>Acerca de
