--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Etiquetas Básicas de HTML, Atributos y Valores - MAQ</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=
-    , initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width= , initial-scale=1.0">
+    <meta name="keywords" content="html, etiquetas, atributos">
+    <meta name="author" content="Martin Quevedo">
+    <meta name="description" content="Descripción de las etiquetas basicas de html y sus atributos">
+   
 </head>
 <body>
     <h1> Proyecto de sitio Web 2022 - 1601 </h1>
@@ -17,6 +20,7 @@
     </h3>
 
     <a href="fase2/design.html"> Fase 2 </a> <br>
-    <a href="fase3/index.html"> Fase 3 </a>
+    <a href="fase3/index.html"> Fase 3 </a> <br>
+    <a href="fase4/index.html"> Fase 4 </a>
 </body>
 </html>
