--- a/fase3/recurso2.html
+++ b/fase3/recurso2.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Etiquetas Básicas de HTML, Atributos y Valores - MAQ</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="keywords" content="html, etiquetas, atributos">
+    <meta name="author" content="Martin Quevedo">
+    <meta name="description" content="Descripción de las etiquetas basicas de html y sus atributos">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
