--- a/fase4/evaluacion2.html
+++ b/fase4/evaluacion2.html
@@ -39,17 +39,14 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"></a>
-                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Recursos Digitales
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Recurso 1</a></li>
-                            <li><a class="dropdown-item" href="#">Recurso 2</a></li>
+                            <li><a class="dropdown-item" href="tema1.html">Recurso 1</a></li>
+                            <li><a class="dropdown-item" href="tema2.html">Recurso 2</a></li>
                         </ul>
                     </li>
 
