--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1> Proyecto de sitio Web 2022 - 1601 </h1>
-    <h3> Martin Quevedo <br>
+    <h3> Martin Andres Quevedo Quimbayo <br>
     Ingeniería de sistemas <br>
     12/02/2022 <br>
     correo electronico: maqq2679@gmail.com <br>
